# boardgamegeek-cli

./: .env  .gitignore  Cargo.toml  README.md  sqlx-data.json
app/: apollo.config.js  codegen.yml  graphql.d.ts  graphql.schema.json  graphql.tsx  package-lock.json  package.json  schema.codegen.yml  schema.graphql  ts.codegen.yml
app/components/: ClientOnly.tsx
app/graphql/: games.gql.ts  games.graphql
app/pages/: _app.tsx  games.graphql  games.graphql.ts  index.tsx  test.graphql
app/pages/games/: [username].tsx
migrations/: 20220405174448_create.sql  20220609063120_users.sql
src/: lib.rs  main.rs  server.rs
