[package]
name = "boardgamegeek-cli"
description = "List game boards from BGG user collection"
version = "0.1.0"
edition = "2021"
authors = ["Cédric Eberhardt"]

[profile.release]
# Link-Time Optimization using whole-program analysis.
# It will make the app smaller, but it will also make it faster at runtime!
lto = true
# This causes debuginfo to be stripped from release binaries.
strip = "debuginfo"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
console = "0.15.0"
rayon = "1.5.2"
regex = "1.5.5"
reqwest = "0.11.10"
roxmltree = "0.14.1"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"
unicode-segmentation = "1.9.0"
