[package]
name = "boardgamegeek-cli"
description = "List game boards from BGG user collection"
version = "0.1.0"
edition = "2021"
authors = ["Cédric Eberhardt"]

[profile.release]
# Link-Time Optimization using whole-program analysis.
# It will make the app smaller, but it will also make it faster at runtime!
lto = true
# This causes debuginfo to be stripped from release binaries.
strip = "debuginfo"

[dependencies]
async-graphql = "4.0.1"
async-graphql-axum = "4.0.1"
axum = { version = "0.5.6", features = ["http2", "ws"] }
clap = { version = "3.1.18", features = ["derive"] }
console = "0.15.0"
hyper = { version = "0.14.19", features = ["full"] }
rayon = "1.5.3"
regex = "1.5.6"
reqwest = "0.11.10"
roxmltree = "0.14.1"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "offline",
] }
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"
tower = "0.4.12"
tower-http = { version = "0.3.3", features = [
    "set-header",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
unicode-segmentation = "1.9.0"
